Add more explanations and conclusions to notebook

--- a/w1/Notebook.ipynb
+++ b/w1/Notebook.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Bag of Visual Words Image Classification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The source of the algorithm is inside several .py files. Accessing through bovw's run method we can configure the execution in order to iterate over the desired parameters. If a parameter has exactly one value, only that will be use. If it has tree, a np.linspace will be created with them."
    ]
   },
@@ -56,7 +63,7 @@
    "metadata": {},
    "source": [
     "#### Test different amounts of local features using SIFT\n",
-    "If we don't have enough features the results will be bad but if we have too many the computational time will increase too much. We should find a compromise between both."
+    "If we don't have enough features the results will be bad, but if we have too many the computational time will increase too much. We should find a compromise between both."
    ]
   },
   {
@@ -157,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The accuracy from 500 features onwards is more or less constant. So a value between 500 and 600 should work properly."
+    "We observe a peak in accuracy when we retain the 600 best SIFT local features. So a value around 600 should do the job."
    ]
   },
   {
@@ -220,14 +227,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the graph above, we can crearly observe how `dense_sift` outperforms `sift`."
+    "Effectively, in the graph above we can clearly observe how `dense_sift` outperforms regular `sift` by at least 15% of accuracy."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test different amounts of codebook sizes k"
+    "#### Test different amounts of codebook sizes k\n",
+    "In the BoW model, the final step is to convert vector-represented local features to \"codewords\", which produces a \"codebook\". A codeword can be considered as a representative of several similar local features. One simple method is performing k-means clustering over all the feature vectors, where the number of clusters `k` affects the size of the codebook."
    ]
   },
   {
@@ -428,7 +436,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test different values of k for the k-nn classifier"
+    "We can observe that the accuracy from 200-250 number of clusters onwards remains fairly constant. Thus, a value between 200-250 should work properly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test different values of k for the k-nn classifier\n",
+    "This week, we will use one of the simplest classifiers: the k-nearest neighbors algorithm. The basic idea is that an object is classified by a majority vote of its neighbors, with the object being assigned to the class most common among its k nearest neighbors. That's why the number of nearest neighbors must be odd."
    ]
   },
   {
@@ -539,14 +555,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The number of neighbors must be at least 10 to provide good enough results."
+    "From the plot above, we can conclude that the number of neighbors in the k-nn classifier must be at least 7 to provide good enough results."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test different distances for the k-nn classifier"
+    "#### Test different distances for the k-nn classifier\n",
+    "Images are represented as points in an n-dimensional space. Therefore, in order to find the closest neighbors to a given point, we need to define a distance measure between points. In this case, we are interested in metrics intended for real-valued vector spaces, so we use `euclidean`, `manhattan` and `chebyshev` distances."
    ]
   },
   {
@@ -617,7 +634,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The euclidean distance is clearly the best performing one."
+    "We can observe that `euclidean` distance is the best performing one when using Dense SIFT, whereas `manhattan` distance is a little bit better when using regular SIFT. `chebyshev` distance is worse in both cases."
    ]
   },
   {
@@ -625,7 +642,7 @@
    "metadata": {},
    "source": [
     "#### Confusion matrix\n",
-    "Finally, we plot the confusion matrix of the best combination of hyperparameters."
+    "Finally, we plot the confusion matrix for the best combination of hyperparameters."
    ]
   },
   {
@@ -718,6 +735,13 @@
    "source": [
     "run_experiment(method=['dense_sift'], n_clusters=[250], n_neighbors=[11], distance=['euclidean'], confusion_matrix=True)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With this configuration, we obtain an accuracy of almost 74%. We can observe that the biggest deviations are produced when `mountain` is predicted as `forest` (19%), when `highway` is predicted as `coast` (18%), and when `coast` is predicted as `opencountry` (16%). We also see that the strongest class is `forest` (95%) and the weakest class is `opencountry` (58%)."
+   ]
   }
  ],
  "metadata": {
@@ -736,7 +760,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
