--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -41,9 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from argparse import Namespace\n",
@@ -58,7 +56,7 @@
     "def run_experiment(param_grid: dict):\n",
     "    args = Namespace(train_path='../data/MIT_split/train',\n",
     "                     test_path='../data/MIT_split/test',\n",
-    "                     cache_path='../data/cache')\n",
+    "                     cache_path='../.cache')\n",
     "    return main(args, param_grid)\n"
    ]
   },
@@ -97,6 +95,44 @@
    "metadata": {},
    "source": [
     "Comment results above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Test different kernels and penalty parameter of the error term \"C\" for the classifier. Pyramid level is set to 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'classifier__kernel': ['linear', 'rbf', 'sigmoid', histogram_intersection_kernel],\n",
+    "    'classifier__C': np.logspace(-4, 4, 9),\n",
+    "    'transformer__levels': [1]\n",
+    "}\n",
+    "\n",
+    "results = run_experiment(param_grid)\n",
+    "results.loc[results.param_classifier__kernel == histogram_intersection_kernel, 'param_classifier__kernel'] = \\\n",
+    "    \"histogram_intersection\"\n",
+    "\n",
+    "results.pivot(index='param_classifier__C', columns='param_classifier__kernel', values='mean_test_score') \\\n",
+    "    .plot.line(logx=True)\n",
+    "\n",
+    "plt.xlabel('C')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comment results above. RBF should perform much better."
    ]
   },
   {
