--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -4,13 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Classification\n",
+    "# Bag of Visual Words Image Classification\n",
     "\n",
     "## Implementation\n",
     "\n",
     "### Pipeline\n",
     "\n",
-    "The process is divided intro 3 independent steps using a scikit `Pipeline`. Its input is a list of pictures, with the keypoints and the descriptors. The steps are:\n",
+    "The process is divided into 3 independent steps using a scikit `Pipeline`. Its input is a list of pictures, with the keypoints and the descriptors. The steps are:\n",
     "\n",
     "- SpatialPyramid: performs the clustering of the descriptors and calculates the histograms.\n",
     "- StandardScaler: standarizes each column of the feature matrix.\n",
@@ -20,9 +20,9 @@
     "\n",
     "### GridSearchCV\n",
     "\n",
-    "We use scikit class `GridSearchCV` in order to compute the parameter combinations. Internally, it performs cross-validation with the different combinations and returns the best result or, in our case, a table with all the results. This table is the put inside a pandas `DataFrame` and returned.\n",
+    "We use scikit-learn class `GridSearchCV` in order to compute the parameter combinations. Internally, it performs cross-validation with the different combinations and returns the best result or, in our case, a table with all the results. This table is then wrapped around a pandas `DataFrame` and returned.\n",
     "\n",
-    "We are using 5 as the cv parameter and creating as many jobs as ores in the computer.\n",
+    "We are using 5 folds for the cross-validation and creating as many jobs as cores in the computer.\n",
     "\n",
     "### Histogram intersection kernel\n",
     "\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,112 @@
     "                     test_path='../data/MIT_split/test',\n",
     "                     cache_path='../.cache')\n",
     "    return main(args, param_grid)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Codebook sampling\n",
+    "Since we run Dense SIFT with a small `step_size` and for several `scales` at each location, we get a great amount of descriptor vectors. But we don't need all of them for the construction of the codebook, we can get away with a random subset of those. In this experiment, we test different amounts of samples used for the creation of the codeebok."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'transformer__n_samples': np.linspace(10000, 100000, 5, dtype=int),\n",
+    "}\n",
+    "results = run_experiment(param_grid)\n",
+    "\n",
+    "results.plot.line(x='param_transformer__n_samples', y='mean_test_score')\n",
+    "plt.xlabel('samples')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.legend(loc='best')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comment results above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Codebook size\n",
+    "In this experiment we test different codebook sizes or, in other words, different number of clusters for the K-Means algorithm that generates the codebook. We try sizes multiples of 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'transformer__n_clusters': np.logspace(7, 10, 8, base=2, dtype=int),\n",
+    "    'transformer__n_levels': [1]\n",
+    "}\n",
+    "results = run_experiment(param_grid)\n",
+    "\n",
+    "results.plot.line(x='param_transformer__n_clusters', y='mean_test_score')\n",
+    "plt.xlabel('n_clusters')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.legend(loc='best')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comment results above"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Normalization of descriptors\n",
+    "In this experiment, we test different types of normalization of the descriptor vectors. We try L1-norm, L2-norm and Power-norm, which consists in applying to each dimension the following function:\n",
+    "\n",
+    "$f(x) = \\operatorname{sign}(z)|z|^{\\alpha}$\n",
+    "\n",
+    "where $0 \\leq \\alpha \\leq 1$ is a parameter of the normalization (https://www.robots.ox.ac.uk/~vgg/rg/papers/peronnin_etal_ECCV10.pdf)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_grid = {\n",
+    "    'transformer__norm': ['l1', 'l2', 'power'],\n",
+    "}\n",
+    "\n",
+    "results = run_experiment(param_grid)\n",
+    "\n",
+    "# Colormap needed until a bug is fixed in next version of pandas.\n",
+    "results.plot.bar(x='param_transformer__norm', y='mean_test_score', colormap='jet')\n",
+    "\n",
+    "plt.xlabel('norm')\n",
+    "plt.ylabel('accuracy')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comment results above"
    ]
   },
   {
@@ -175,108 +281,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test the classifier using different amounts of samples randomly selected form the descriptors, which were obtained using dense_sift with different scale factors."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_grid = {\n",
-    "    'transformer__samples': np.linspace(10000, 100000, 5),\n",
-    "}\n",
-    "\n",
-    "results = run_experiment(param_grid)\n",
-    "\n",
-    "results.plot.line(x='param_transformer__samples', y='mean_test_score')\n",
-    "\n",
-    "plt.plot(results.param_transformer__samples, results.mean_test_score)\n",
-    "\n",
-    "plt.xlabel('samples')\n",
-    "plt.ylabel('accuracy')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Comment results above"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test different normalization for the descriptors."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_grid = {\n",
-    "    'transformer__norm': ['l1', 'l2', 'power'],\n",
-    "}\n",
-    "\n",
-    "results = run_experiment(param_grid)\n",
-    "\n",
-    "# Colormap needed until a bug is fixed in next version of pandas.\n",
-    "results.plot.bar(x='param_transformer__norm', y='mean_test_score', colormap='jet')\n",
-    "\n",
-    "plt.xlabel('norm')\n",
-    "plt.ylabel('accuracy')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Comment results above"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Test different number of clusters, multiples of 2, for the min_batch k-means."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "param_grid = {\n",
-    "    'transformer__n_cluster': np.logspace(8, 11, 8, base=2),\n",
-    "}\n",
-    "\n",
-    "results = run_experiment(param_grid)\n",
-    "\n",
-    "results.plot.line(x='param_transformer__n_cluster', y='mean_test_score')\n",
-    "\n",
-    "plt.xlabel('n_cluster')\n",
-    "plt.ylabel('accuracy')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Comment results above"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -300,9 +304,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 2
 }
