--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -64,7 +64,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Codebook sampling\n",
+    "### Experiments\n",
+    "#### Codebook sampling\n",
     "Since we run Dense SIFT with a small `step_size` and for several `scales` at each location, we get a great amount of descriptor vectors. But we don't need all of them for the construction of the codebook, we can get away with a random subset of those. In this experiment, we test different amounts of samples used for the creation of the codeebok."
    ]
   },
@@ -97,8 +98,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Codebook size\n",
-    "In this experiment we test different codebook sizes or, in other words, different number of clusters for the K-Means algorithm that generates the codebook. We try sizes multiples of 2."
+    "#### Codebook size\n",
+    "In this experiment, we test different codebook sizes or, in other words, different number of clusters for the K-Means algorithm used to generate the codebook. We try sizes multiples of 2."
    ]
   },
   {
@@ -131,10 +132,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Normalization of descriptors\n",
+    "#### Normalization of descriptors\n",
     "In this experiment, we test different types of normalization of the descriptor vectors. We try L1-norm, L2-norm and Power-norm, which consists in applying to each dimension the following function:\n",
     "\n",
-    "$f(x) = \\operatorname{sign}(z)|z|^{\\alpha}$\n",
+    "$f(z) = \\operatorname{sign}(z)|z|^{\\alpha}$\n",
     "\n",
     "where $0 \\leq \\alpha \\leq 1$ is a parameter of the normalization (https://www.robots.ox.ac.uk/~vgg/rg/papers/peronnin_etal_ECCV10.pdf)."
    ]
@@ -148,14 +149,13 @@
     "param_grid = {\n",
     "    'transformer__norm': ['l1', 'l2', 'power'],\n",
     "}\n",
-    "\n",
     "results = run_experiment(param_grid)\n",
     "\n",
     "# Colormap needed until a bug is fixed in next version of pandas.\n",
     "results.plot.bar(x='param_transformer__norm', y='mean_test_score', colormap='jet')\n",
-    "\n",
     "plt.xlabel('norm')\n",
     "plt.ylabel('accuracy')\n",
+    "plt.legend(loc='best')\n",
     "plt.show()"
    ]
   },
@@ -170,7 +170,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test different kernels and penalty parameter of the error term \"C\" for the classifier."
+    "#### Spatial Pyramid levels\n",
+    "In this experiment, we test different number of levels for the spatial pyramid that takes into account the location of the descriptors to generate a global image descriptor."
    ]
   },
   {
@@ -180,19 +181,15 @@
    "outputs": [],
    "source": [
     "param_grid = {\n",
-    "    'classifier__kernel': ['linear', 'rbf', 'sigmoid', histogram_intersection_kernel],\n",
-    "    'classifier__C': np.logspace(-4, 4, 9),\n",
+    "    'transformer__n_levels': np.linspace(1, 3, 3, dtype=int),\n",
     "}\n",
-    "\n",
     "results = run_experiment(param_grid)\n",
-    "results.loc[results.param_classifier__kernel == histogram_intersection_kernel, 'param_classifier__kernel'] = \\\n",
-    "    \"histogram_intersection\"\n",
     "\n",
-    "results.pivot(index='param_classifier__C', columns='param_classifier__kernel', values='mean_test_score') \\\n",
-    "    .plot.line(logx=True)\n",
-    "\n",
-    "plt.xlabel('C')\n",
+    "# Colormap needed until a bug is fixed in next version of pandas.\n",
+    "results.plot.bar(x='param_transformer__n_levels', y='mean_test_score', colormap='jet')\n",
+    "plt.xlabel('n_levels')\n",
     "plt.ylabel('accuracy')\n",
+    "plt.legend(loc='best')\n",
     "plt.show()"
    ]
   },
@@ -207,7 +204,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test different kernels and penalty parameter of the error term \"C\" for the classifier. Pyramid level is set to 1"
+    "#### Kernel type and penalty parameter\n",
+    "In this experiment, we test different kernels and values for the penalty parameter `C` of the error term of the classifier. We also investigate how different number of spatial pyramid levels may affect."
    ]
   },
   {
@@ -218,8 +216,8 @@
    "source": [
     "param_grid = {\n",
     "    'classifier__kernel': ['linear', 'rbf', 'sigmoid', histogram_intersection_kernel],\n",
-    "    'classifier__C': np.logspace(-4, 4, 9),\n",
-    "    'transformer__levels': [1]\n",
+    "    'classifier__C': np.logspace(-3, 15, 5, base=2),\n",
+    "    'transformer__n_levels': [1, 2]\n",
     "}\n",
     "\n",
     "results = run_experiment(param_grid)\n",
@@ -231,6 +229,8 @@
     "\n",
     "plt.xlabel('C')\n",
     "plt.ylabel('accuracy')\n",
+    "plt.legend(loc='best')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -238,14 +238,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comment results above. RBF should perform much better."
+    "Comment results above. With `n_levels=1` RBF kernel should perform much better."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test different kernels and kernel coefficients for the classifier."
+    "#### Kernel type and kernel coefficient\n",
+    "In this experiment, we test different kernels and values for the kernel coefficient `gamma` of the classifier."
    ]
   },
   {
@@ -256,7 +257,7 @@
    "source": [
     "param_grid = {\n",
     "    'classifier__kernel': ['linear', 'rbf', 'sigmoid', histogram_intersection_kernel],\n",
-    "    'classifier__gamma': np.logspace(-4, 4, 9)\n",
+    "    'classifier__gamma': np.logspace(-15, 3, 5, base=2)\n",
     "}\n",
     "\n",
     "results = run_experiment(param_grid)\n",
