Half comments done

--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -35,7 +35,28 @@
     "    for d in range(n_samples):\n",
     "        K[d, :] = np.sum(np.minimum(x[d], u), axis=1)\n",
     "    return K\n",
-    "```"
+    "```\n",
+    "\n",
+    "### Default parameters\n",
+    "\n",
+    "To run each experiment we use the following default parameters, unless otherwise specified:\n",
+    "\n",
+    "```python\n",
+    "DenseSIFT:\n",
+    "  step_size=16\n",
+    "  scales=(4, 8, 12, 16)\n",
+    "  \n",
+    "SpatialPyramid:\n",
+    "    n_clusters=500\n",
+    "    n_samples=10000\n",
+    "    norm='l2'\n",
+    "    n_levels=2\n",
+    "  \n",
+    "SVC:\n",
+    "    C=1\n",
+    "    kernel='rbf'\n",
+    "    gamma=.001\n",
+    "```   "
    ]
   },
   {
@@ -138,7 +159,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comment results above"
+    "Above we see the comparison between the accuracy and the number of samples, keypoints, used. We can observe that taking a larger number of samples increases the accuracy slightly. Nevertheless, the execution of the algorithm scales linearly, so taking into account the computational complexity we used 10000 samples in the experiments."
    ]
   },
   {
@@ -220,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comment results above"
+    "Using a larger number of kernels slightly increses the classification accuracy while the procesing time also increases. It's important to take notice that using more than 800 clusters worses the classification."
    ]
   },
   {
@@ -388,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comment results above"
+    "Using the same parameteres and only changing the levels without fine tunnig doent seem to imporve the results by adding more levels to the spatial pyramid. Nevertheless, as it can be seen in the kernel type comarison section, a 2 level spatial pyramid obtained the best results."
    ]
   },
   {
@@ -735,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
