Half comments done

--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using a larger number of kernels slightly increses the classification accuracy while the procesing time also increases. It's important to take notice that using more than 800 clusters worses the classification."
+    "Using a larger number of kernels slightly increses the classification accuracy while the procesing time also increases. It's important to take notice that using more than 800 clusters worses the classification. As the number of clusters grows, it makes the words in the codebook more specific, since there are more codewords that could represent any vector of descriptors. But there's an inflection point from which making the vocabulary more specific doesn't help in distinguishing between classes; in our case, this point is around 800 clusters. With more than 800 codewords, the histogram that represents an image (or region) has too many bins containing low values, which provides a poor representation of the image (or region) because differences are smoothed."
    ]
   },
   {
@@ -409,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the same parameteres and only changing the levels without fine tunnig doent seem to imporve the results by adding more levels to the spatial pyramid. Nevertheless, as it can be seen in the kernel type comarison section, a 2 level spatial pyramid obtained the best results."
+    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine tunnig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comarison section, a 2 level spatial pyramid obtained the best results."
    ]
   },
   {
