More comments done

--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -409,7 +409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine tunnig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comarison section, a 2 level spatial pyramid obtained the best results."
+    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine tunnig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comparison section, below, a 2 level spatial pyramid obtained the best results."
    ]
   },
   {
