Finished comenting results

--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -101,13 +101,7 @@
      "text": [
       "Extract train descriptors: 0.885916s\n",
       "Extract test descriptors: 0.368029s\n",
-      "Fitting 3 folds for each of 5 candidates, totalling 15 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 5 candidates, totalling 15 fits\n",
       "Train: 568.770287s\n",
       "Test: 17.291676s\n",
       "Best params: {'transformer__n_samples': 100000}\n",
@@ -166,13 +160,7 @@
      "text": [
       "Extract train descriptors: 0.827541s\n",
       "Extract test descriptors: 0.338618s\n",
-      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 8 candidates, totalling 24 fits\n",
       "Train: 545.927934s\n",
       "Test: 9.846766s\n",
       "Best params: {'transformer__n_clusters': 760, 'transformer__n_levels': 1}\n",
@@ -236,13 +224,7 @@
      "text": [
       "Extract train descriptors: 0.577312s\n",
       "Extract test descriptors: 0.254418s\n",
-      "Fitting 3 folds for each of 3 candidates, totalling 9 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 3 candidates, totalling 9 fits\n",
       "Train: 351.914704s\n",
       "Test: 17.817160s\n",
       "Best params: {'transformer__norm': 'power'}\n",
@@ -280,7 +262,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comment results above"
+    "All norms perform quite similarly, altough power norm is slightly better than the other 2."
    ]
   },
   {
@@ -302,13 +284,7 @@
      "text": [
       "Extract train descriptors: 0.607145s\n",
       "Extract test descriptors: 0.267276s\n",
-      "Fitting 3 folds for each of 3 candidates, totalling 9 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 3 candidates, totalling 9 fits\n",
       "Train: 363.947076s\n",
       "Test: 8.484948s\n",
       "Best params: {'transformer__n_levels': 1}\n",
@@ -346,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine tunnig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comparison section, below, a 2 level spatial pyramid obtained the best results."
+    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine tunnig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comparison section, below, a `n_levels=2` obtained the best results."
    ]
   },
   {
@@ -368,13 +344,7 @@
      "text": [
       "Extract train descriptors: 0.899068s\n",
       "Extract test descriptors: 0.455976s\n",
-      "Fitting 3 folds for each of 40 candidates, totalling 120 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 40 candidates, totalling 120 fits\n",
       "Train: 3708.124748s\n",
       "Test: 34.851612s\n",
       "Best params: {'classifier__C': 0.125, 'classifier__kernel': <function histogram_intersection_kernel at 0x7f7b968d9d90>, 'transformer__n_levels': 2}\n",
@@ -440,7 +410,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comment results above. With `n_levels=1` RBF kernel should perform much better."
+    "From the graphs above, we can crearly obseve than both linear and histogram intersection kernels are not affected by the parameter `C`. It is also important to realize that changing the number of leaves greatly impacts the results, specifically for rbf kernel, which is the second best with `n_levels=1` but the worst with `n_levels=2`.\n",
+    "\n",
+    "Histogram intersection kernel is crearly the best of all of them."
    ]
   },
   {
@@ -462,13 +434,7 @@
      "text": [
       "Extract train descriptors: 0.916644s\n",
       "Extract test descriptors: 0.343593s\n",
-      "Fitting 3 folds for each of 20 candidates, totalling 60 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Fitting 3 folds for each of 20 candidates, totalling 60 fits\n",
       "Train: 2240.159596s\n",
       "Test: 33.397511s\n",
       "Best params: {'classifier__gamma': 3.0517578125e-05, 'classifier__kernel': <function histogram_intersection_kernel at 0x7f7b968d9d90>}\n",
@@ -512,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comment results above"
+    "As it happens with `C`, linear intersection and linear kernels are not affected by it and, as we can see, are the ones with the best accuracy. This was extracted using `n_levels=2`, that's why `rbf` kernel performs bad."
    ]
   },
   {
@@ -539,7 +505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
