--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -22,11 +22,17 @@
     "\n",
     "We use scikit-learn class `GridSearchCV` in order to compute the parameter combinations. Internally, it performs cross-validation with the different combinations and returns the best result or, in our case, a table with all the results. This table is then wrapped around a pandas `DataFrame` and returned.\n",
     "\n",
-    "We are using 5 folds for the cross-validation and creating as many jobs as cores in the computer.\n",
+    "We are using 3 folds for the cross-validation and creating as many jobs as cores in the computer.\n",
+    "\n",
+    "### Spatial pyramids\n",
+    "\n",
+    "The Bag of Visual Words model is a great solution to aggregate local features into a single global descriptor vector. But this approach has a flaw: it completely ignores all information about the spatial layout of the features, so it has severely limited descriptive ability. To overcome this limitation, spatial pyramids of descriptors are used.\n",
+    "\n",
+    "Informally, spatial pyramids work by partitioning the image into increasingly fine sub-regions and computing histograms of the codewords inside each sub-region; the grid at level $l$ has $2^l$ cells along each dimension, for a total of $D = 2^{dl}$ cells. Furthermore, descriptor vectors at finer resolutions are weighted more; the weight associated with level $l$ is set to $\\frac{1}{2^{n\\_levels-l}}$, which is inversely proportional to cell width at that level. Intuitively, we want to penalize matches found in larger cells because they involve increasingly dissimilar features. \n",
     "\n",
     "### Histogram intersection kernel\n",
     "\n",
-    "We use the following implementation for the histogram intersection kernel:\n",
+    "Since our descriptor vectors are histograms, it makes sense that we compute the similarity of such vectors with the histogram intersection. We use the following implementation for the histogram intersection kernel:\n",
     "\n",
     "```python\n",
     "def histogram_intersection_kernel(x, u):\n",
@@ -210,7 +216,7 @@
     "\n",
     "$f(z) = \\operatorname{sign}(z)|z|^{\\alpha}$\n",
     "\n",
-    "where $0 \\leq \\alpha \\leq 1$ is a parameter of the normalization (https://www.robots.ox.ac.uk/~vgg/rg/papers/peronnin_etal_ECCV10.pdf)."
+    "where $0 \\leq \\alpha \\leq 1$ is a parameter of the normalization. We fix $\\alpha = 0.5$ throughout all our experiments. (https://www.robots.ox.ac.uk/~vgg/rg/papers/peronnin_etal_ECCV10.pdf)"
    ]
   },
   {
@@ -262,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All norms perform quite similarly, altough power norm is slightly better than the other 2."
+    "All norms perform quite similarly, although power norm is slightly better than the other 2."
    ]
   },
   {
@@ -322,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine tunnig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comparison section, below, a `n_levels=2` obtained the best results."
+    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine-tunig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comparison section below, a `n_levels=2` obtained the best results."
    ]
   },
   {
@@ -410,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graphs above, we can crearly obseve than both linear and histogram intersection kernels are not affected by the parameter `C`. It is also important to realize that changing the number of leaves greatly impacts the results, specifically for rbf kernel, which is the second best with `n_levels=1` but the worst with `n_levels=2`.\n",
+    "From the graphs above, we can crearly obseve that both linear and histogram intersection kernels are not affected by the penalty parameter `C`. It is also important to realize that changing the number of levels greatly impacts the results, specifically for RBF kernel, which is the second best with `n_levels=1` but the worst with `n_levels=2`.\n",
     "\n",
     "Histogram intersection kernel is crearly the best of all of them."
    ]
@@ -478,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As it happens with `C`, linear intersection and linear kernels are not affected by it and, as we can see, are the ones with the best accuracy. This was extracted using `n_levels=2`, that's why `rbf` kernel performs bad."
+    "As it happens with the penalty parameter `C`, histogram intersection and linear kernels are not affected by the `gamma` coefficient. Furthermore, as we can see, those kernels are also the ones that provide the best accuracy. Results above were extracted using `n_levels=2`, that is why the RBF kernel performs bad."
    ]
   },
   {
@@ -505,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
