--- a/w2/report.ipynb
+++ b/w2/report.ipynb
@@ -32,7 +32,7 @@
     "\n",
     "### Histogram intersection kernel\n",
     "\n",
-    "Since our descriptor vectors are histograms, it makes sense that we compute the similarity of such vectors with the histogram intersection. We use the following implementation for the histogram intersection kernel:\n",
+    "Since our descriptor vectors are histograms, it makes sense that we compute the similarity of such vectors with their histogram intersection. We use the following implementation for the histogram intersection kernel:\n",
     "\n",
     "```python\n",
     "def histogram_intersection_kernel(x, u):\n",
@@ -91,8 +91,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Experiments\n",
-    "#### Codebook sampling\n",
+    "## Experiments\n",
+    "### Codebook sampling\n",
     "Since we run Dense SIFT with a small `step_size` and for several `scales` at each location, we get a great amount of descriptor vectors. But we don't need all of them for the construction of the codebook, we can get away with a random subset of those. In this experiment, we test different amounts of samples used for the creation of the codeebok."
    ]
   },
@@ -144,14 +144,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above we see the comparison between the accuracy and the number of samples, keypoints, used. We can observe that taking a larger number of samples increases the accuracy slightly. Nevertheless, the execution of the algorithm scales linearly, so taking into account the computational complexity we used 10000 samples in the experiments."
+    "Above we see the comparison between the accuracy and the number of samples, keypoints, used. We can observe that taking a larger number of samples increases the accuracy only slightly. Nevertheless, the execution time of the algorithm increases linearly. Therefore, taking into account the tradeoff between accuracy and computational complexity, we used 10000 samples in our experiments."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Codebook size\n",
+    "### Codebook size\n",
     "In this experiment, we test different codebook sizes or, in other words, different number of clusters for the K-Means algorithm used to generate the codebook. We try sizes multiples of 2."
    ]
   },
@@ -211,7 +211,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Normalization of descriptors\n",
+    "### Normalization of descriptors\n",
     "In this experiment, we test different types of normalization of the descriptor vectors. We try L1-norm, L2-norm and Power-norm, which consists in applying to each dimension the following function:\n",
     "\n",
     "$f(z) = \\operatorname{sign}(z)|z|^{\\alpha}$\n",
@@ -268,14 +268,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All norms perform quite similarly, although power norm is slightly better than the other 2."
+    "As we can observe, all norms perform quite similarly, although power norm is slightly better than the other 2."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Spatial Pyramid levels\n",
+    "### Spatial Pyramid levels\n",
     "In this experiment, we test different number of levels for the spatial pyramid that takes into account the location of the descriptors to generate a global image descriptor."
    ]
   },
@@ -328,14 +328,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine-tunig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comparison section below, a `n_levels=2` obtained the best results."
+    "Using the same parameteres and adding more levels to the spatial pyramid, only changing the levels without fine-tunig, doesn't seem to improve the results. Nevertheless, as it can be seen in the kernel type comparison section below, we obtained the best results with `n_levels=2`."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Kernel type and penalty parameter\n",
+    "### Kernel type and penalty parameter\n",
     "In this experiment, we test different kernels and values for the penalty parameter `C` of the error term of the classifier. We also investigate how different number of spatial pyramid levels may affect."
    ]
   },
@@ -416,7 +416,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graphs above, we can crearly obseve that both linear and histogram intersection kernels are not affected by the penalty parameter `C`. It is also important to realize that changing the number of levels greatly impacts the results, specifically for RBF kernel, which is the second best with `n_levels=1` but the worst with `n_levels=2`.\n",
+    "From the graphs above, we can crearly observe that both linear and histogram intersection kernels are not affected by the penalty parameter `C`. It is also important to realize that changing the number of levels greatly impacts the results, specifically for RBF kernel, which is the second best with `n_levels=1` but the worst with `n_levels=2`.\n",
     "\n",
     "Histogram intersection kernel is crearly the best of all of them."
    ]
@@ -425,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Kernel type and kernel coefficient\n",
+    "### Kernel type and kernel coefficient\n",
     "In this experiment, we test different kernels and values for the kernel coefficient `gamma` of the classifier."
    ]
   },
